objects/Company_Naicscodes__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>BLN_Company__c</fullName>
        <label>BLN Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>BLN Company_Naicscodes</relationshipLabel>
        <relationshipName>BLN_Company_Naicscodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLN_GN_User__c</fullName>
        <label>BLN GN User</label>
        <referenceTo>GN_User__c</referenceTo>
        <relationshipLabel>BLN Company_Naicscodes</relationshipLabel>
        <relationshipName>BLN_Company_Naicscodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLN_NAICS_Code__c</fullName>
        <label>BLN NAICS Code</label>
        <referenceTo>NAICS_Code__c</referenceTo>
        <relationshipLabel>BLN Company_Naicscodes</relationshipLabel>
        <relationshipName>BLN_Company_Naicscodes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BLN_TKT_profile__c</fullName>
        <label>BLN TKT profile</label>
        <referenceTo>Tkt_profile__c</referenceTo>
        <relationshipLabel>BLN Company_Naicscodes</relationshipLabel>
        <relationshipName>BLN_Company_Naicscodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Company_Naicscodes</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>BLN_GN_User__c</columns>
        <columns>BLN_NAICS_Code__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CN-{0000000}</displayFormat>
        <label>Custom Object Label Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BLN Company_Naicscodes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>